--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.24.0",
+    "express": "^4.17.2",
+    "multer": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-text-mask": "^5.4.3",
+    "styled-components": "^5.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run build && node ./server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
